--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Holy Grid</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./style.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <div id="app">
-      <div id="header">Header</div>
-      <div id="nav">Nav</div>
-      <div id="article-1">Article 1</div>
-      <div id="article-2">Article 2</div>
-      <div id="ad-area">Ad Area</div>
-      <div id="footer">Footer</div>
-    </div>
-  </body>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>holy-grid</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <div id="page">  
+        <div id="header">Header</div>
+        <div id="article1">Article 1</div>
+        <div id="article2">Article 2</div>
+        <div id="footer">Footer</div>
+        <div id="nav">Nav</div>
+        <div id="ad">Ad Area</div>
+      </div>  
+        <script src="" async defer></script>
+    </body>
 </html>
